all po files updated from develop at 2019-07-18 13:46

--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-24 19:27+0200\n"
+"POT-Creation-Date: 2019-07-18 13:44+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -1130,6 +1130,9 @@ msgstr "Alternativní 2"
 msgid "Alternative URL for images listed on FlashImage"
 msgstr "Alternativní URL obrazů pro FlashImage"
 
+msgid "Alternative URLs for DVB-T/C or ATSC"
+msgstr ""
+
 #
 msgid "Alternative numbering mode"
 msgstr "Alternativní číslování"
@@ -1634,6 +1637,12 @@ msgstr "Posílení modré"
 msgid "Boost green"
 msgstr "Posílení zelené"
 
+msgid "Boot to Android image"
+msgstr ""
+
+msgid "Boot to Recovery menu"
+msgstr ""
+
 msgid "Bosnia and Herzegovina"
 msgstr "Bosna a Hercegovina"
 
@@ -1942,6 +1951,11 @@ msgstr "Číslo kanálu a název programu"
 
 msgid "Channelnumber, picon and servicename"
 msgstr "Číslo kanálu, pikona a název programu"
+
+#
+#, fuzzy
+msgid "Channels"
+msgstr "Kanál"
 
 msgid "Channels and EPG"
 msgstr "Programy a EPG"
@@ -3020,6 +3034,21 @@ msgstr "Odebrat"
 msgid "Destination of fallback remote receiver"
 msgstr "Umístění vzdáleného záložního přijímače"
 
+# ##
+#, fuzzy
+msgid "Destination of fallback remote receiver for ATSC"
+msgstr "Umístění vzdáleného záložního přijímače"
+
+# ##
+#, fuzzy
+msgid "Destination of fallback remote receiver for DVB-C"
+msgstr "Umístění vzdáleného záložního přijímače"
+
+# ##
+#, fuzzy
+msgid "Destination of fallback remote receiver for DVB-T"
+msgstr "Umístění vzdáleného záložního přijímače"
+
 msgid "Details for plugin: "
 msgstr "Detaily pluginu: "
 
@@ -3475,6 +3504,11 @@ msgstr "Upravit DNS"
 #
 msgid "Edit chapters of current title"
 msgstr "Upravit kapitoly zvoleného titulu"
+
+#
+#, fuzzy
+msgid "Edit menu"
+msgstr "Upravit časovač"
 
 msgid "Edit selection"
 msgstr "Upravit výběr"
@@ -4085,6 +4119,18 @@ msgstr "Port záložního přijímače"
 
 msgid "Fallback remote receiver URL"
 msgstr "Adresa vzdáleného záložního přijímače"
+
+#, fuzzy
+msgid "Fallback remote receiver for ATSC"
+msgstr "Port záložního přijímače"
+
+#, fuzzy
+msgid "Fallback remote receiver for DVB-C"
+msgstr "Port záložního přijímače"
+
+#, fuzzy
+msgid "Fallback remote receiver for DVB-T"
+msgstr "Port záložního přijímače"
 
 msgid "Fallback remote receiver setup"
 msgstr "Záložní přijímač"
@@ -8608,6 +8654,9 @@ msgstr "Zvolte akci při dokončení přehrávání souboru."
 msgid "Set all hotkey to default?"
 msgstr "Výchozí nastavení hotkey?"
 
+msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
+msgstr ""
+
 msgid "Set blocktimes by weekday"
 msgstr "Nastavit časy blokování podle dnů"
 
@@ -10143,7 +10192,8 @@ msgstr "Tato volba umožňuje pro UHD vynutit režimy HDR10"
 msgid "This option allows you to force the HLG modes for UHD"
 msgstr "Tato volba umožňuje pro UHD vynutit režimy HLG"
 
-msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button"
+#, fuzzy
+msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button. With the user defined hidden the blue button is not shown in the menus"
 msgstr "Umožňuje skrýt a třídit položky menu. Při uživatelském nastavení může uživatel měnit pořadí a skrývat položky menu pomocí modrého tlačítka a následně pomocí < >."
 
 msgid "This option allows you to power off the display."
@@ -13234,6 +13284,11 @@ msgstr "Aktualizovat záložky"
 
 #
 msgid "user defined"
+msgstr "Uživatelské"
+
+#
+#, fuzzy
+msgid "user defined hidden"
 msgstr "Uživatelské"
 
 msgid "variety show"
