--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-26 23:01+0200\n"
+"POT-Creation-Date: 2019-07-18 13:44+0200\n"
 "PO-Revision-Date: 2018-10-22T21:44:30+02:00\n"
 "Last-Translator: daddelfalk <OpenPLi>\n"
 "Language-Team: Sfteam  angelo2807@hotmail.com\n"
@@ -995,6 +995,9 @@ msgstr "Alternativen hinzufügen"
 msgid "Alternative URL for images listed on FlashImage"
 msgstr ""
 
+msgid "Alternative URLs for DVB-T/C or ATSC"
+msgstr ""
+
 msgid "Alternative numbering mode"
 msgstr "Alternativer Nummerierungs-Modus"
 
@@ -1431,6 +1434,12 @@ msgstr "Boost blau"
 msgid "Boost green"
 msgstr "Boost grün"
 
+msgid "Boot to Android image"
+msgstr ""
+
+msgid "Boot to Recovery menu"
+msgstr ""
+
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnien und Herzegowina"
 
@@ -1691,6 +1700,10 @@ msgstr "Kanalnummer und Sendername"
 
 msgid "Channelnumber, picon and servicename"
 msgstr "Kanalnummer, Picon und Sendername"
+
+#, fuzzy
+msgid "Channels"
+msgstr "Kanal"
 
 msgid "Channels and EPG"
 msgstr "Kanäle und EPG"
@@ -2644,6 +2657,18 @@ msgstr "Markierung aufheben"
 msgid "Destination of fallback remote receiver"
 msgstr "Fallback-Remote-Receiver auswählen"
 
+#, fuzzy
+msgid "Destination of fallback remote receiver for ATSC"
+msgstr "Fallback-Remote-Receiver auswählen"
+
+#, fuzzy
+msgid "Destination of fallback remote receiver for DVB-C"
+msgstr "Fallback-Remote-Receiver auswählen"
+
+#, fuzzy
+msgid "Destination of fallback remote receiver for DVB-T"
+msgstr "Fallback-Remote-Receiver auswählen"
+
 msgid "Details for plugin: "
 msgstr "Details des Plugins: "
 
@@ -3014,6 +3039,10 @@ msgstr "Bearbeite DNS"
 
 msgid "Edit chapters of current title"
 msgstr "Kapitel des ausgewählten Titels schneiden"
+
+#, fuzzy
+msgid "Edit menu"
+msgstr "Timer editieren"
 
 msgid "Edit selection"
 msgstr "Auswahl bearbeiten"
@@ -3557,6 +3586,18 @@ msgstr "Fallback-Remote-Receiver Port"
 
 msgid "Fallback remote receiver URL"
 msgstr "Fallback-Remote-Receiver URL"
+
+#, fuzzy
+msgid "Fallback remote receiver for ATSC"
+msgstr "Fallback-Remote-Receiver Port"
+
+#, fuzzy
+msgid "Fallback remote receiver for DVB-C"
+msgstr "Fallback-Remote-Receiver Port"
+
+#, fuzzy
+msgid "Fallback remote receiver for DVB-T"
+msgstr "Fallback-Remote-Receiver Port"
 
 msgid "Fallback remote receiver setup"
 msgstr "Fallback-Remote-Receiver Setup"
@@ -7468,6 +7509,9 @@ msgstr "Aktion einstellen, wenn die Filmwiedergabe beendet ist."
 msgid "Set all hotkey to default?"
 msgstr "Alle Hotkeys auf standard setzen?"
 
+msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
+msgstr ""
+
 msgid "Set blocktimes by weekday"
 msgstr "Setze Blockzeiten nach Wochentag"
 
@@ -8827,7 +8871,8 @@ msgstr "Mit dieser Option können Sie die HDR10-Modi für UHD erzwingen"
 msgid "This option allows you to force the HLG modes for UHD"
 msgstr "Mit dieser Option können Sie die HLG-Modi für UHD erzwingen"
 
-msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button"
+#, fuzzy
+msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button. With the user defined hidden the blue button is not shown in the menus"
 msgstr "Diese Option erlaubt Ihnen Menü-Einträge zu verstecken und zu sortieren. Bei Auswahl 'Benutzerdefiniert' kann das Verändern der Reihenfolge und das Verstecken von Menü-Einträgen über die blaue Taste realisiert werden."
 
 msgid "This option allows you to power off the display."
@@ -11524,6 +11569,10 @@ msgid "update bookmarks"
 msgstr "Automatische Lesezeichen"
 
 msgid "user defined"
+msgstr "Benutzerdefiniert"
+
+#, fuzzy
+msgid "user defined hidden"
 msgstr "Benutzerdefiniert"
 
 msgid "variety show"
