--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-26 23:01+0200\n"
-"PO-Revision-Date: 2019-06-26 23:03+0200\n"
+"POT-Creation-Date: 2019-07-18 13:44+0200\n"
+"PO-Revision-Date: 2019-07-18 13:46+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -992,6 +992,9 @@ msgstr "Variante 2"
 msgid "Alternative URL for images listed on FlashImage"
 msgstr "URL alternative pour les images listées sur FlashImage"
 
+msgid "Alternative URLs for DVB-T/C or ATSC"
+msgstr "URL alternatives pour DVB-T/C ou ATSC"
+
 msgid "Alternative numbering mode"
 msgstr "Mode de numérotation alternatif"
 
@@ -1429,6 +1432,12 @@ msgstr "Intensifier le bleu"
 msgid "Boost green"
 msgstr "Intensifier le vert"
 
+msgid "Boot to Android image"
+msgstr "Démarrer sur l'image Android"
+
+msgid "Boot to Recovery menu"
+msgstr "Démarrer dans le menu de récupération"
+
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnie et Herzegovine"
 
@@ -1704,6 +1713,9 @@ msgstr "Numéro de la chaîne et nom du service"
 
 msgid "Channelnumber, picon and servicename"
 msgstr "Numéro de la chaîne, picon et nom du service"
+
+msgid "Channels"
+msgstr "Chaînes"
 
 msgid "Channels and EPG"
 msgstr "Chaînes et EPG"
@@ -2655,6 +2667,15 @@ msgstr "Désélectionner"
 msgid "Destination of fallback remote receiver"
 msgstr "Destination du récepteur distant de repli."
 
+msgid "Destination of fallback remote receiver for ATSC"
+msgstr "Destination du récepteur à distance de repli pour ATSC"
+
+msgid "Destination of fallback remote receiver for DVB-C"
+msgstr "Destination du récepteur à distance de repli pour DVB-C"
+
+msgid "Destination of fallback remote receiver for DVB-T"
+msgstr "Destination du récepteur à distance de repli pour DVB-T"
+
 msgid "Details for plugin: "
 msgstr "Détails sur le plugin: "
 
@@ -3029,6 +3050,9 @@ msgstr "Éditer DNS"
 
 msgid "Edit chapters of current title"
 msgstr "Éditer chapitres du titre actuel"
+
+msgid "Edit menu"
+msgstr "Modifier le menu"
 
 msgid "Edit selection"
 msgstr "Editer la sélection"
@@ -3572,6 +3596,15 @@ msgstr "Configuration du port du récepteur distant de repli"
 
 msgid "Fallback remote receiver URL"
 msgstr "URL du récepteur distant de repli"
+
+msgid "Fallback remote receiver for ATSC"
+msgstr "Récepteur à distance de repli pour ATSC"
+
+msgid "Fallback remote receiver for DVB-C"
+msgstr "Récepteur à distance de repli pour DVB-C"
+
+msgid "Fallback remote receiver for DVB-T"
+msgstr "Récepteur à distance de repli pour DVB-T"
 
 msgid "Fallback remote receiver setup"
 msgstr "Configuration du récepteur distant de repli"
@@ -7462,6 +7495,9 @@ msgstr "Configure le comportement lorsqu'un film est terminé."
 msgid "Set all hotkey to default?"
 msgstr "Remettre toutes les hotkey à la valeur par défaut?"
 
+msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
+msgstr "Définir d'autres tuners de repli pour DVB-T/C ou ATSC"
+
 msgid "Set blocktimes by weekday"
 msgstr "Définir les périodes de blocage par semaine"
 
@@ -7568,7 +7604,7 @@ msgid "Shellscript"
 msgstr "Shellscript"
 
 msgid "Shift"
-msgstr ""
+msgstr "Décalage"
 
 msgid "Short filenames"
 msgstr "Noms de fichiers court"
@@ -8483,7 +8519,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 26-06-2019"
+"Dernière MAJ: 18-07-2019"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -8828,8 +8864,8 @@ msgstr "Cette option vous permet de forcer le mode HDR10 pour l’UHD"
 msgid "This option allows you to force the HLG modes for UHD"
 msgstr "Cette option vous permet de forcer le mode HLG pour l’UHD"
 
-msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button"
-msgstr "Cette option vous permet de cacher et de trier les entrées des menus. Lorsqu’il est activé vous pouvez changer l’ordre et cacher les entrées des menus via le bouton bleu."
+msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button. With the user defined hidden the blue button is not shown in the menus"
+msgstr "Cette option vous permet de masquer et trier les entrées de menu. Lors de la sélection de l'utilisateur, vous pouvez modifier l'ordre et masquer les éléments du menu via le bouton bleu. Avec l'utilisateur défini caché le bouton bleu n'est pas affiché dans les menus"
 
 msgid "This option allows you to power off the display."
 msgstr "Cette option vous permet d'éteindre l'affichage avant."
@@ -11528,6 +11564,9 @@ msgstr "mettre à jour les signets"
 
 msgid "user defined"
 msgstr "Défini par l'utilisateur"
+
+msgid "user defined hidden"
+msgstr "utilisateur défini caché"
 
 msgid "variety show"
 msgstr "Spectacle de variété"
