--- a/po/cs.po
+++ b/po/cs.po
@@ -1131,7 +1131,7 @@ msgid "Alternative URL for images listed on FlashImage"
 msgstr "Alternativní URL obrazů pro FlashImage"
 
 msgid "Alternative URLs for DVB-T/C or ATSC"
-msgstr ""
+msgstr "Alternativní záložní přijímače pro DVB-T/C nebo ATSC"
 
 #
 msgid "Alternative numbering mode"
@@ -1638,10 +1638,10 @@ msgid "Boost green"
 msgstr "Posílení zelené"
 
 msgid "Boot to Android image"
-msgstr ""
+msgstr "Boot do Android image"
 
 msgid "Boot to Recovery menu"
-msgstr ""
+msgstr "Boot do Recovery menu"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosna a Hercegovina"
@@ -1953,9 +1953,8 @@ msgid "Channelnumber, picon and servicename"
 msgstr "Číslo kanálu, pikona a název programu"
 
 #
-#, fuzzy
 msgid "Channels"
-msgstr "Kanál"
+msgstr "Kanály"
 
 msgid "Channels and EPG"
 msgstr "Programy a EPG"
@@ -3035,19 +3034,16 @@ msgid "Destination of fallback remote receiver"
 msgstr "Umístění vzdáleného záložního přijímače"
 
 # ##
-#, fuzzy
 msgid "Destination of fallback remote receiver for ATSC"
-msgstr "Umístění vzdáleného záložního přijímače"
+msgstr "Umístění záložního přijímače pro ATSC"
 
 # ##
-#, fuzzy
 msgid "Destination of fallback remote receiver for DVB-C"
-msgstr "Umístění vzdáleného záložního přijímače"
+msgstr "Umístění záložního přijímače pro DVB-C"
 
 # ##
-#, fuzzy
 msgid "Destination of fallback remote receiver for DVB-T"
-msgstr "Umístění vzdáleného záložního přijímače"
+msgstr "Umístění záložního přijímače pro DVB-T"
 
 msgid "Details for plugin: "
 msgstr "Detaily pluginu: "
@@ -3506,9 +3502,8 @@ msgid "Edit chapters of current title"
 msgstr "Upravit kapitoly zvoleného titulu"
 
 #
-#, fuzzy
 msgid "Edit menu"
-msgstr "Upravit časovač"
+msgstr "Úprava menu"
 
 msgid "Edit selection"
 msgstr "Upravit výběr"
@@ -4120,17 +4115,14 @@ msgstr "Port záložního přijímače"
 msgid "Fallback remote receiver URL"
 msgstr "Adresa vzdáleného záložního přijímače"
 
-#, fuzzy
 msgid "Fallback remote receiver for ATSC"
-msgstr "Port záložního přijímače"
+msgstr "Záložní přijímač pro ATSC"
 
-#, fuzzy
 msgid "Fallback remote receiver for DVB-C"
-msgstr "Port záložního přijímače"
+msgstr "Záložní přijímač pro DVB-C"
 
-#, fuzzy
 msgid "Fallback remote receiver for DVB-T"
-msgstr "Port záložního přijímače"
+msgstr "Záložní přijímač pro DVB-T"
 
 msgid "Fallback remote receiver setup"
 msgstr "Záložní přijímač"
@@ -8655,7 +8647,7 @@ msgid "Set all hotkey to default?"
 msgstr "Výchozí nastavení hotkey?"
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
-msgstr ""
+msgstr "Nastavení záložního přijímače pro DVB-T/C nebo ATSC"
 
 msgid "Set blocktimes by weekday"
 msgstr "Nastavit časy blokování podle dnů"
@@ -9824,7 +9816,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®24.6.2019"
+"®19.7.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10192,9 +10184,8 @@ msgstr "Tato volba umožňuje pro UHD vynutit režimy HDR10"
 msgid "This option allows you to force the HLG modes for UHD"
 msgstr "Tato volba umožňuje pro UHD vynutit režimy HLG"
 
-#, fuzzy
 msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button. With the user defined hidden the blue button is not shown in the menus"
-msgstr "Umožňuje skrýt a třídit položky menu. Při uživatelském nastavení může uživatel měnit pořadí a skrývat položky menu pomocí modrého tlačítka a následně pomocí < >."
+msgstr "Umožňuje třídit nebo skrývat položky menu. Uživatelské nastavení umožnuje  pomocí modrého tlačítka měnit pořadí a skrývat položky. Uživatelské skryté nezobrazuje modré tlačítko."
 
 msgid "This option allows you to power off the display."
 msgstr "Toto nastavení umožňuje vypnout displej."
@@ -13287,9 +13278,8 @@ msgid "user defined"
 msgstr "Uživatelské"
 
 #
-#, fuzzy
 msgid "user defined hidden"
-msgstr "Uživatelské"
+msgstr "Uživatelské skryté"
 
 msgid "variety show"
 msgstr "varieté"
