all po files updated from develop at 2019-07-20 22:03

--- a/po/de.po
+++ b/po/de.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-07-19 21:52+0200\n"
-"PO-Revision-Date: 2019-07-10 22:20+0200\n"
+"PO-Revision-Date: 2019-07-20 21:55+0200\n"
 "Last-Translator: Pike_Bishop <alfredzngr023@gmail.com>\n"
 "Language-Team: Sfteam  angelo2807@hotmail.com\n"
 "Language: de\n"
@@ -164,9 +164,8 @@ msgstr " (geringer als in jedem auto)"
 msgid " extensions."
 msgstr " Erweiterungen."
 
-#, fuzzy
 msgid " min"
-msgstr "%d min"
+msgstr "min"
 
 msgid " ms"
 msgstr " ms"
@@ -408,9 +407,9 @@ msgstr "%s %s freier Festplattenspeicher"
 msgid "%s (%s)\n"
 msgstr "%s (%s)\n"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%s imported from fallback tuner"
-msgstr "Aktivieren Sie den Import-Timer vom Fallback-Tuner"
+msgstr "%s importiert vom Reserve-Tuner"
 
 #. TRANSLATORS: The satellite with name '%s' is no longer used after a configuration change. The user is asked whether or not the satellite should be deleted.
 #, python-format
@@ -985,19 +984,17 @@ msgstr "Auch in Standby"
 msgid "Alternative"
 msgstr "Alternativen hinzufügen"
 
-#, fuzzy
 msgid "Alternative 1"
-msgstr "Alternativen hinzufügen"
+msgstr "Alternative Eins"
 
-#, fuzzy
 msgid "Alternative 2"
-msgstr "Alternativen hinzufügen"
+msgstr "Alternative Zwei"
 
 msgid "Alternative URL for images listed on FlashImage"
 msgstr "Alternative URL für Images gelistet in \"Flashe Image\""
 
 msgid "Alternative URLs for DVB-T/C or ATSC"
-msgstr ""
+msgstr "Alternative URLs für DVB-T / C oder ATSC"
 
 msgid "Alternative numbering mode"
 msgstr "Alternativer Nummerierungs-Modus"
@@ -1436,10 +1433,10 @@ msgid "Boost green"
 msgstr "Boost grün"
 
 msgid "Boot to Android image"
-msgstr ""
+msgstr "Android Booten (Hochfahren)"
 
 msgid "Boot to Recovery menu"
-msgstr ""
+msgstr "Recovery-Menü Booten (Hochfahren)"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnien und Herzegowina"
@@ -1581,6 +1578,21 @@ msgid ""
 "Screens change with left/right buttons or use red, green, blue to toggle.\n"
 "Yellow for returning back to this intro"
 msgstr ""
+"Kann verwendet werden um auf Defekte Pixel am TV zu testen.\n"
+"\n"
+"Verfügbare Farb Test-Bildschirme:\n"
+"\n"
+"rot\n"
+"grün\n"
+"blau\n"
+"weiss\n"
+"schwarz\n"
+"cyan\n"
+"magenta\n"
+"gelb\n"
+"\n"
+"Bildschirm wechseln mit links / rechts Tasten oder mit den Tasten rot, grün, blau umschalten.\n"
+"Mit Taste gelb zurück zur Einführung."
 
 msgid "Can only find a network drive to store the backup this means after the flash the autorestore will not work. Alternativaly you can mount the network drive after the flash and perform a manufacurer reset to autorestore"
 msgstr "Für das Backup wurde nur eine Netzwerkfestplatte gefunden, daher ist ein automatischer Restore der Einstellungen nach dem Flash nicht möglich. Alternativ kann nach dem Flash die Netzwerkfestplatte erneut eingebunden und dann die Box auf Werkseinstellungen zurückgesetzt werden um Autorestore zu nutzen."
@@ -1702,9 +1714,8 @@ msgstr "Kanalnummer und Sendername"
 msgid "Channelnumber, picon and servicename"
 msgstr "Kanalnummer, Picon und Sendername"
 
-#, fuzzy
 msgid "Channels"
-msgstr "Kanal"
+msgstr "Kanäle"
 
 msgid "Channels and EPG"
 msgstr "Kanäle und EPG"
@@ -1799,7 +1810,7 @@ msgid "Clear playlist"
 msgstr "Wiedergabeliste leeren"
 
 msgid "Client is streaming from this box!"
-msgstr ""
+msgstr "Ein Client streamt von der Box !"
 
 msgid "Clone TV screen to LCD"
 msgstr "Klone TV Bild zum LCD"
@@ -1898,9 +1909,8 @@ msgstr "Konfigurationsmodus: %s"
 msgid "Configuration..."
 msgstr "Konfiguration…"
 
-#, fuzzy
 msgid "Configure ATSC"
-msgstr "Konfiguriere DVB-ATSC"
+msgstr "Konfiguriere ATSC"
 
 msgid "Configure DVB-C"
 msgstr "Konfiguriere DVB-C"
@@ -2505,9 +2515,8 @@ msgstr "DVD Player"
 msgid "DVD titlelist"
 msgstr "DVD Titelliste"
 
-#, fuzzy
 msgid "DVDPlayer"
-msgstr "DVD Player"
+msgstr "DVD-Player"
 
 msgid "Danish"
 msgstr "Dänisch"
@@ -2662,17 +2671,14 @@ msgstr "Markierung aufheben"
 msgid "Destination of fallback remote receiver"
 msgstr "Fallback-Remote-Receiver auswählen"
 
-#, fuzzy
 msgid "Destination of fallback remote receiver for ATSC"
-msgstr "Fallback-Remote-Receiver auswählen"
+msgstr "Bestimmungsort vom Reserve-Receiver für ATSC"
 
-#, fuzzy
 msgid "Destination of fallback remote receiver for DVB-C"
-msgstr "Fallback-Remote-Receiver auswählen"
+msgstr "Bestimmungsort vom Reserve-Receiver für DVB-C"
 
-#, fuzzy
 msgid "Destination of fallback remote receiver for DVB-T"
-msgstr "Fallback-Remote-Receiver auswählen"
+msgstr "Bestimmungsort vom Reserve-Receiver für DVB-T"
 
 msgid "Details for plugin: "
 msgstr "Details des Plugins: "
@@ -3045,9 +3051,8 @@ msgstr "Bearbeite DNS"
 msgid "Edit chapters of current title"
 msgstr "Kapitel des ausgewählten Titels schneiden"
 
-#, fuzzy
 msgid "Edit menu"
-msgstr "Timer editieren"
+msgstr "Menü editieren"
 
 msgid "Edit selection"
 msgstr "Auswahl bearbeiten"
@@ -3592,17 +3597,14 @@ msgstr "Fallback-Remote-Receiver Port"
 msgid "Fallback remote receiver URL"
 msgstr "Fallback-Remote-Receiver URL"
 
-#, fuzzy
 msgid "Fallback remote receiver for ATSC"
-msgstr "Fallback-Remote-Receiver Port"
+msgstr "Reserve-Receiver für ATSC"
 
-#, fuzzy
 msgid "Fallback remote receiver for DVB-C"
-msgstr "Fallback-Remote-Receiver Port"
+msgstr "Reserve-Receiver für  DVB-C"
 
-#, fuzzy
 msgid "Fallback remote receiver for DVB-T"
-msgstr "Fallback-Remote-Receiver Port"
+msgstr "Reserve-Receiver für  DVB-T"
 
 msgid "Fallback remote receiver setup"
 msgstr "Fallback-Remote-Receiver Einstellungen"
@@ -4139,7 +4141,7 @@ msgid "Hotkey zap"
 msgstr "Tastenkombination \"umschalten\""
 
 msgid "Hotplug"
-msgstr ""
+msgstr "Hot-Plug"
 
 msgid "How many minutes do you want add to the recording?"
 msgstr "Wie viele Minuten wollen Sie der Aufnahme hinzufügen?"
@@ -4269,9 +4271,9 @@ msgstr "Importiert die Kanäle und / oder den EPG der Receiver-URL des Remote-Re
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importiere Kanäle und / oder EPG von Remote-Receiver-URL, wenn Receiver oder Enigma2 neu gestartet wird."
 
-#, fuzzy, python-format
+#, python-format
 msgid "Import from fallback tuner failed, %s"
-msgstr "Kanäle von Fallback-Tuner fehlgeschlagen% s"
+msgstr "Import vom Reserve-Tuner fehlgeschlagen, %s"
 
 msgid "Import from remote receiver URL"
 msgstr "Import der Remote-Receiver-URL"
@@ -4866,9 +4868,8 @@ msgstr "Manuelle Suche"
 msgid "Manual transponder"
 msgstr "Manueller Transponder"
 
-#, fuzzy
 msgid "Manually import from fallback tuner"
-msgstr "Aktivieren Sie den Import-Timer vom Fallback-Tuner"
+msgstr "Manueller Import vom Reserve-Tuner"
 
 msgid "Manufacturer"
 msgstr "Hersteller"
@@ -4976,9 +4977,8 @@ msgstr "Modell"
 msgid "Model: "
 msgstr "Modell: "
 
-#, fuzzy
 msgid "Modes"
-msgstr "Modus"
+msgstr "Modi"
 
 msgid "Modulation"
 msgstr "Modulation"
@@ -5186,7 +5186,7 @@ msgid "Nameserver setup"
 msgstr "DNS-Einstellungen"
 
 msgid "Namespace & Orbital pos."
-msgstr ""
+msgstr "Namensraum & Orbital Position"
 
 msgid "Namibia"
 msgstr "Namibia"
@@ -5304,9 +5304,8 @@ msgstr ""
 "Keine Festplatte gefunden oder\n"
 "Festplatte nicht initialisiert."
 
-#, fuzzy
 msgid "No active subservices available."
-msgstr "Keine Aktualisierungen verfügbar"
+msgstr "Keine aktiven Subservices verfügbar."
 
 msgid "No age block"
 msgstr "Keine Altersbeschränkung"
@@ -5479,13 +5478,11 @@ msgstr "Norwegisch"
 msgid "Not Defined"
 msgstr "Nicht definiert"
 
-#, fuzzy
 msgid "Not Installed"
-msgstr "Installiere"
+msgstr "Nicht installiert"
 
-#, fuzzy
 msgid "Not Required"
-msgstr "Nicht definiert"
+msgstr "Nicht erforderlich"
 
 msgid "Not associated"
 msgstr "Nicht verbunden"
@@ -5793,7 +5790,7 @@ msgid "Pitcairn"
 msgstr "Pitcairn"
 
 msgid "Pixels\n"
-msgstr ""
+msgstr "Pixel\n"
 
 msgid "Play"
 msgstr "Abspielen"
@@ -5801,9 +5798,8 @@ msgstr "Abspielen"
 msgid "Play DVD"
 msgstr "DVD abspielen"
 
-#, fuzzy
 msgid "Play DVDs"
-msgstr "DVD abspielen"
+msgstr "DVDs abspielen"
 
 msgid "Play audio-CD..."
 msgstr "Musik-CD abspielen…"
@@ -6000,7 +5996,7 @@ msgid "Please set your time zone"
 msgstr "Stellenen sie ihre lokale Zeitzone ein"
 
 msgid "Please setup the following basic configs!"
-msgstr ""
+msgstr "Bitte richten Sie die folgende Grund-Konfiguration ein !"
 
 msgid ""
 "Please use direction keys to move the PiP window.\n"
@@ -6130,7 +6126,7 @@ msgid "Positioner setup log"
 msgstr "Positioner-Setup-Protokoll"
 
 msgid "Power LED"
-msgstr ""
+msgstr "Power-LED"
 
 msgid "Power management. Consult your receiver's manual for more information."
 msgstr "Energieverwaltung. Weitere Informationen finden Sie in der Bedienungsanleitung Ihres Receivers."
@@ -6207,15 +6203,14 @@ msgstr "Drücke '0' zum Umschalten des PiP-Modus"
 msgid "Press 'OK' for attach function."
 msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
 
-#, fuzzy
 msgid "Press 'OK' for attach next function or 'CH+/-' for edit attached."
-msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
+msgstr "Drücken Sie 'OK' um die nächste Funktion aufzurufen, oder 'Kanal+ / -' um den Anschluss zu editieren."
 
 msgid "Press 'OK' for remove item or 'CH+/-' for toggle to list of features."
-msgstr ""
+msgstr "Drücken Sie 'OK' um den Eintrag zu löschen, oder 'Kanal + / -' um zur Liste der Funktionen zu wechseln."
 
 msgid "Press 'OK' for remove item or < > for change order or 'CH+/-' for toggle to list of features."
-msgstr ""
+msgstr "Drücken Sie 'OK' um den Eintrag zu löschen, oder '< >' um die Anordnung zu ändern, oder 'Kanal + / -' um zur Liste der Funktionen zu wechseln."
 
 msgid "Press INFO on your remote control for additional information."
 msgstr "INFO drücken für zusätzliche Informationen."
@@ -6266,12 +6261,11 @@ msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
 msgid "Press OK, save and exit..."
 msgstr "Drücke OK zum Speichern und Beenden…"
 
-#, fuzzy
 msgid "Press or select button and then press 'OK' for attach function."
-msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
+msgstr "Drücken oder wählen Sie die Taste, und danach 'OK' drücken um die Funktion umzuschalten."
 
 msgid "Press or select button and then press 'OK' for attach next function or edit attached."
-msgstr ""
+msgstr "Drücken oder wählen Sie die Taste, dann die 'OK' Taste drücken um die nächste Funktion aufzurufen, oder den Anschluss zu editieren."
 
 msgid "Press yellow to set this interface as default interface."
 msgstr "Drücken Sie Gelb, um diese Schnittstelle als Standard zu setzen."
@@ -6696,9 +6690,8 @@ msgstr "Benutzeroberfläche (Enigma) neu starten"
 msgid "Restart enigma in debug mode"
 msgstr "Benutzeroberfläche (Enigma) im Debugmodus starten"
 
-#, fuzzy
 msgid "Restart enigma in standard mode"
-msgstr "Benutzeroberfläche (Enigma) im Debugmodus starten"
+msgstr "Enigma (Benutzeroberfläche) im Standard-Modus neu starten"
 
 msgid "Restart network"
 msgstr "Netzwerk neu starten"
@@ -6927,9 +6920,8 @@ msgstr "Saudi Arabia"
 msgid "Save"
 msgstr "Speichern"
 
-#, fuzzy
 msgid "Save / Enter text and exit"
-msgstr "Text eingeben und danach beenden"
+msgstr "Text eingeben und speichern, danach beenden."
 
 msgid "Save and exit"
 msgstr "Speichern und beenden"
@@ -7048,9 +7040,8 @@ msgstr "Scroll Verzögerrung"
 msgid "Scroll repeats"
 msgstr "Scroll wiederholt"
 
-#, fuzzy
 msgid "Search"
-msgstr "Durchsuche"
+msgstr "Suche"
 
 msgid "Search east"
 msgstr "Östlich suchen"
@@ -7106,9 +7097,8 @@ msgstr "Wählen Sie “A” oder “B”, wenn Ihr Antennensystem dies erfordert
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Wählen Sie “FBC SCR”, wenn dieser Tuner ein Unicable/SCR-Gerät verwendet. Für alle anderen Setups wählen Sie “FBC automatisch”."
 
-#, fuzzy
 msgid "Select 'Yes' when you want to configure this tuner for ATSC"
-msgstr "Wollen Sie die Tuner DVB-ATSC konfigurieren?"
+msgstr "Wählen Sie 'Ja' wenn Sie diesen Tuner für ATSC konfigurieren möchten."
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
 msgstr "Wollen Sie den Tuner DVB-C konfigurieren?"
@@ -7289,13 +7279,13 @@ msgid "Select target folder"
 msgstr "Wähle Zielverzeichnis"
 
 msgid "Select the User Band channel to be assigned to this tuner. This is an index into the table of frequencies the SCR switch or SCR LNB uses to pass the requested transponder to the tuner."
-msgstr ""
+msgstr "Wählen Sie den User-Band-Kanal aus welcher diesem Tuner zugewiesen werden soll. Dies ist die Kennzahl in der Frequenz-Tabelle, die der SCR-Umschalter, oder der SCR-LNB benötigt um den angeforderten Transponder an den Tuner zu übergeben."
 
 msgid "Select the User Band frequency to be assigned to this tuner. This is the frequency the SCR switch or SCR LNB uses to pass the requested transponder to the tuner."
-msgstr ""
+msgstr "Wählen Sie die User-Band-Frequenz aus welche diesem Tuner zugewiesen werden soll. Dies ist die Frequenz, die der SCR-Umschalter, oder der SCR-LNB benötigt um den angeforderten Transponder an den Tuner zu übergeben."
 
 msgid "Select the User Band to be assigned to this tuner. This is an index into the table of frequencies the SCR switch or SCR LNB uses to pass the requested transponder to the tuner."
-msgstr ""
+msgstr "Wählen Sie das User-Band aus welches diesem Tuner zugewiesen werden soll. Dies ist die Kennzahl in der Frequenz-Tabelle, die der SCR-Umschalter, oder der SCR-LNB benötigt um den angeforderten Transponder an den Tuner zu übergeben."
 
 msgid "Select the character or action under the virtual keyboard cursor"
 msgstr "Wählen Sie das Zeichen oder die Aktion für den Cursor aus"
@@ -7351,9 +7341,8 @@ msgstr "Wählen Sie das Gebietsschema der virtuellen Tastatur aus einem Menü"
 msgid "Select the virtual keyboard shifted character set"
 msgstr "Wählen Sie den Zeichensatz für die Shift Tastatur aus"
 
-#, fuzzy
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr "Wählen Sie den Zeichensatz für die Shift Tastatur aus"
+msgstr "Shift nur für das nächste Zeichen benutzen"
 
 msgid "Select upgrade source"
 msgstr "Wählen Sie eine Update-Quelle"
@@ -7515,7 +7504,7 @@ msgid "Set all hotkey to default?"
 msgstr "Alle Hotkeys auf standard setzen?"
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
-msgstr ""
+msgstr "Bestimme alternative Reserve-Tuner für DVB-T / C oder ATSC"
 
 msgid "Set blocktimes by weekday"
 msgstr "Setze Blockzeiten nach Wochentag"
@@ -7623,7 +7612,7 @@ msgid "Shellscript"
 msgstr "Shell-Skript"
 
 msgid "Shift"
-msgstr ""
+msgstr "Wechsel"
 
 msgid "Short filenames"
 msgstr "Kurze Dateinamen"
@@ -8003,7 +7992,7 @@ msgid "Social/Political/Economics"
 msgstr "Soziales/Politik/Wirtschaft"
 
 msgid "SocketMMI"
-msgstr ""
+msgstr "Socket-MMI"
 
 msgid "SoftCam / CI"
 msgstr "SoftCam / CI"
@@ -8523,13 +8512,13 @@ msgid "T2MI PID"
 msgstr "PMT PID"
 
 msgid "T2MI PLP"
-msgstr ""
+msgstr "T2MI-PLP"
 
 msgid "T2MI PLP ID"
 msgstr "PLP ID"
 
 msgid "T2MI RAW Mode"
-msgstr ""
+msgstr "T2MI-ROH Modus"
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
 msgid "TRANSLATOR_INFO"
@@ -8812,7 +8801,7 @@ msgstr ""
 "Es besteht kein Grund zur Beunruhigung, wenn Werte angezeigt werden, die suspekt erscheinen!"
 
 msgid "This is a multitype tuner. Available options depend on the hardware."
-msgstr ""
+msgstr "Das ist ein MultiTyp-Tuner. Verfügbare Optionen sind abhängig von der Hardware."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "In dieser Reihenfolge werden DiSEqC-Befehle an das Antennensystem gesendet. Die Reihenfolge muss genau der Reihenfolge entsprechen, in der die physikalischen Geräte entlang des Signalkabels angeordnet sind (ausgehend vom Empfängerende)."
@@ -8880,9 +8869,8 @@ msgstr "Mit dieser Option können Sie die HDR10-Modi für UHD erzwingen"
 msgid "This option allows you to force the HLG modes for UHD"
 msgstr "Mit dieser Option können Sie die HLG-Modi für UHD erzwingen"
 
-#, fuzzy
 msgid "This option allows you to hide and sort menu entries. When selecting user you can change order and hide menu items via the blue button. With the user defined hidden the blue button is not shown in the menus"
-msgstr "Diese Option erlaubt Ihnen Menü-Einträge zu verstecken und zu sortieren. Bei Auswahl 'Benutzerdefiniert' kann das Verändern der Reihenfolge und das Verstecken von Menü-Einträgen über die blaue Taste realisiert werden."
+msgstr "Diese Option erlaubt Ihnen Menü-Einträge zu verstecken und zu sortieren. Bei Auswahl 'Benutzerdefiniert' kann das Verändern der Reihenfolge und das Verstecken von Menü-Einträgen über die blaue Taste vorgenommen werden."
 
 msgid "This option allows you to power off the display."
 msgstr "Mit dieser Option können Sie das Display ausschalten."
@@ -9262,9 +9250,8 @@ msgstr "Tunerstatus:"
 msgid "Tuner type"
 msgstr "Tunertyp"
 
-#, fuzzy
 msgid "Tuners & scanning"
-msgstr "Fehler während Suche"
+msgstr "Tuner & Suchlauf"
 
 msgid "Tunisia"
 msgstr "Tunisia"
@@ -10148,7 +10135,7 @@ msgid "Wireless network state"
 msgstr "Funk-Netzwerk Status"
 
 msgid "With T2MI RAW mode disabled (default) we can use single T2MI PLP de-encapsulation. With T2MI RAW mode enabled we can use astra-sm to analyze T2MI"
-msgstr ""
+msgstr "Mit T2MI-ROH Modus deaktiviert (Standard) kann Single T2MI-PLP Kapselung verwendet werden. Mit T2MI-ROH Modus aktiviert kann Astra-sm verwendet werden um T2MI zu analysieren."
 
 msgid "With errors:"
 msgstr "Mit Fehlern:"
@@ -10488,7 +10475,7 @@ msgid "Zgemma H.S/H.2S/H.2H/H5/H7"
 msgstr "Zgemma H.S/H.2S/H.2H/H5/H7"
 
 msgid "Zgemma H9/i55 Plus"
-msgstr ""
+msgstr "Zgemma H9 / i55 Plus"
 
 msgid "Zgemma Star S/2S/H1/H2"
 msgstr "Zgemma Star S/2S/H1/H2"
@@ -11027,9 +11014,8 @@ msgstr "Standard Listenansicht"
 msgid "list style single line"
 msgstr "Einzeilige Listenansicht"
 
-#, fuzzy
 msgid "listens to hotplug events"
-msgstr "Ausrichtung der Sendungstitel"
+msgstr "Auf Hot-Plug Events lauschen"
 
 msgid "literature"
 msgstr "Literatur"
@@ -11415,13 +11401,13 @@ msgstr "Rückwärts spulen"
 msgid "skip forward"
 msgstr "Vorwärts spulen"
 
-#, fuzzy, python-format
+#, python-format
 msgid "slot%s - %s"
-msgstr "Steckplatz% s -% s Modus 1"
+msgstr "Steckplatz%s - %s"
 
-#, fuzzy, python-format
+#, python-format
 msgid "slot%s - %s (current image)"
-msgstr "Slot% s -% s Modus 1 (aktuelles Image)"
+msgstr "Steckplatz%s - %s (Aktuelles Image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
@@ -11590,9 +11576,8 @@ msgstr "Automatische Lesezeichen"
 msgid "user defined"
 msgstr "Benutzerdefiniert"
 
-#, fuzzy
 msgid "user defined hidden"
-msgstr "Benutzerdefiniert"
+msgstr "Benutzerdefiniert versteckt"
 
 msgid "variety show"
 msgstr "Abwechslungsreiche Sendung"
