Update de.po (thanks to Pike_Bishop) and fr.po for release-7.1

--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-11 22:12+0200\n"
-"PO-Revision-Date: 2019-05-11 22:20+0200\n"
+"POT-Creation-Date: 2019-07-20 22:26+0200\n"
+"PO-Revision-Date: 2019-07-20 23:01+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -4200,9 +4200,6 @@ msgstr "Importer les chaînes et/ou l’EPG depuis l’URL du récepteur distant
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Importer les chaînes et/ou l’EPG depuis l’URL du récepteur distant lorsque le récepteur ou Enigma2 est redémarré"
 
-msgid "Import channels from fallback tuner"
-msgstr "Importer les chaînes du récepteur distant de repli"
-
 msgid "Import from remote receiver URL"
 msgstr "Importer depuis l’URL du récepteur distant"
 
@@ -4796,6 +4793,9 @@ msgstr "Recherche manuelle"
 msgid "Manual transponder"
 msgstr "Transpondeur manuel"
 
+msgid "Manually import from fallback tuner"
+msgstr "Importation manuelle du tuner de repli"
+
 msgid "Manufacturer"
 msgstr "Constructeur"
 
@@ -5227,6 +5227,9 @@ msgstr "Pas de ECMPids disponible (Service en clair (FTA))"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Aucun disque dur trouvé, ou disque dur non initialisé!"
 
+msgid "No active subservices available."
+msgstr "Aucun sous service actif disponible."
+
 msgid "No age block"
 msgstr "Pas de blocage sur l'âge"
 
@@ -5397,6 +5400,12 @@ msgstr "Norvégien"
 
 msgid "Not Defined"
 msgstr "Pas défini"
+
+msgid "Not Installed"
+msgstr "Non installé"
+
+msgid "Not Required"
+msgstr "Non requis"
 
 msgid "Not associated"
 msgstr "Non-Associé"
@@ -11289,6 +11298,14 @@ msgstr "Retour rapide"
 
 msgid "skip forward"
 msgstr "Avance rapide"
+
+#, python-format
+msgid "slot%s - %s"
+msgstr "slot%s - %s"
+
+#, python-format
+msgid "slot%s - %s (current image)"
+msgstr "slot%s - %s (image courante)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
