Some vi.po modification by krong

--- a/po/vi.po
+++ b/po/vi.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-07-22 10:41+0200\n"
-"PO-Revision-Date: 2019-07-22 11:11+0200\n"
+"PO-Revision-Date: 2019-07-22 20:15+0700\n"
 "Last-Translator: krong\n"
 "Language-Team: none\n"
 "Language: vi\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.3\n"
 
 msgid ""
 "\n"
@@ -1770,7 +1770,7 @@ msgid "Choose Tuner"
 msgstr "Chọn bộ chỉnh"
 
 msgid "Choose bouquet"
-msgstr "Chọn bó hoa"
+msgstr "Chọn gói kênh"
 
 msgid "Choose which tuner to configure."
 msgstr "Chọn bộ chỉnh nào để cấu hình."
@@ -3439,7 +3439,7 @@ msgid "Exit the wizard"
 msgstr "Thoát khỏi trình hướng dẫn"
 
 msgid "Exit/OK"
-msgstr "Thoát / OK"
+msgstr "Thoát / Đồng ý"
 
 msgid "Expand"
 msgstr "Mở rộng"
@@ -5441,7 +5441,7 @@ msgid "No, never"
 msgstr "Không bao giờ"
 
 msgid "None"
-msgstr "Không ai"
+msgstr "Không"
 
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, with stretching the left/right)
 msgid "Nonlinear"
@@ -5523,7 +5523,7 @@ msgid "Number or SMS style data entry"
 msgstr "Nhập dữ liệu kiểu số hoặc SMS"
 
 msgid "OK"
-msgstr "Được"
+msgstr "Đồng ý"
 
 msgid "ONID"
 msgstr "ONID"
@@ -5550,7 +5550,7 @@ msgid "Offline decode delay (ms)"
 msgstr "Độ trễ giải mã ngoại tuyến (ms)"
 
 msgid "Ok"
-msgstr "Được"
+msgstr "Đồng ý"
 
 msgid "Oman"
 msgstr "Ô-man"
@@ -7005,8 +7005,8 @@ msgstr "Quét%s ..."
 #, python-format
 msgid "Scanning - %d%% completed"
 msgid_plural "Scanning - %d%% completed"
-msgstr[0] "Quét - hoàn thành %d%%"
-msgstr[1] "Quét - hoàn thành %d%%"
+msgstr[0] "Quét%d%% - hoàn thành"
+msgstr[1] "Quét - %d%%hoàn thành"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
@@ -11097,7 +11097,7 @@ msgid "no storage devices found"
 msgstr "không tìm thấy thiết bị lưu trữ"
 
 msgid "none"
-msgstr "không ai"
+msgstr "không"
 
 msgid "normal"
 msgstr "bình thường"
